--- a/worksflow.css
+++ b/worksflow.css
@@ -984,7 +984,7 @@ width: 100%;
 }
 
 .more-task-itme{
-  background-color: #90a6d032;
+ background-color: #e9f6f6;
 }
 
 /* Responsive styles */
@@ -1024,7 +1024,7 @@ width: 100%;
 
 .qna-container {
   padding: 3rem 2rem 2rem;
-  background-color: #90a6d032;
+  background-color: #e9f6f6;
   margin: 2rem 1rem 0rem;
   border-radius: 20px;
 }
