--- a/worksflow.css
+++ b/worksflow.css
@@ -950,7 +950,7 @@ width: 100%;
 .more-task-itme:hover {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.333);
   cursor: pointer;
-  transform: scaleX(120deg);
+ transform: scale(1.1);
 }
 
 .more-task-text {
