--- a/worksflow.css
+++ b/worksflow.css
@@ -237,7 +237,7 @@ strong{
     flex: 1;
     margin-right: 1rem;
     width: 50vw;
-
+    transition: all ease 0.5s; 
   }
 .left:hover{
     transform: scale(1.1);
